// protoc --gogofaster_out=. ./math/proto/proto.proto

syntax = "proto3";

package proto;

service Math {
  rpc Add(MathAddArgs) returns (MathAddArgs) {};
  rpc Subtract(MathSubtractArgs) returns (MathSubtractArgs) {};
}

message MathAddArgs {
  int64 First = 1;
  int64 Second = 2;
}

message MathAddReply { int64 Result = 3; }

message MathSubtractArgs {
  int64 First = 1;
  int64 Second = 2;
}

message MathSubtractReply { int64 Result = 3; }
